# Interpretator

./: README.md
Interpretator/: CMakeLists.txt  file  text.txt
Interpretator/headers/: INT.h  datatype.h  function.h  functionTab.h  headers.h  interpretator.h  object.h  parser.h  sintax.h  symtab.h
Interpretator/sources/: EDI.cpp  function.cpp  functionTab.cpp  interpretator.cpp  object.cpp  parser.cpp  symtab.cpp
